# silkworm

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CMakeSettings.json  Dockerfile  Makefile  README.md  TODO  _conanfile_old.py  appveyor.yml  circle.yml  codecov.yml  conanfile.py  conanfile.txt  conanfile_old.txt  lgtm.yml  requirements.txt  run-linter.sh  silkworm.cpp
cmd/: CMakeLists.txt  ExpectedState.cpp  ExpectedState.hpp  README.md  backend_kv_server.cpp  bench_buffer.cpp  benchmark_precompile.cpp  benchmarks.cpp  blockhashes.cpp  check_blockhashes.cpp  check_change_sets.cpp  check_changes.cpp  check_db.cpp  check_hashstate.cpp  check_poa.cpp  check_pow.cpp  check_senders.cpp  check_senders2.cpp  check_tx_lookup.cpp  common.cpp  common.hpp  consensus.cpp  dbtool.cpp  download_headers.cpp  downloader.cpp  embed.cpp  execute.cpp  expected_state.cpp  expected_state.hpp  extract_headers.cpp  genesistool.cpp  hashstate.cpp  history_index.cpp  initialize_with_genesis.cpp  lightclient.cpp  log_index.cpp  print_db_content.cpp  rpcdaemon.cpp  scan_txs.cpp  sentry.cpp  (+15 more)
cmd/api/: CMakeLists.txt  cachegrind analisys.txt  execute.c  execute.cpp
cmd/benchmark/: CMakeLists.txt  benchmark_test.cpp  buffer.cpp  precompile.cpp
cmd/capi/: CMakeLists.txt  execute.cpp  main.c
cmd/common/: CMakeLists.txt  common.cpp  common.hpp  db_checklist.cpp  db_checklist.hpp  db_max_readers_option.cpp  db_max_readers_option.hpp  human_size_parser_validator.hpp  ip_endpoint_option.hpp  node_options.cpp  node_options.hpp  rpcdaemon_options.cpp  rpcdaemon_options.hpp  sentry_options.cpp  sentry_options.hpp  settings.hpp  shutdown_signal.cpp  shutdown_signal.hpp  snapshot_options.cpp  snapshot_options.hpp
cmd/dev/: CMakeLists.txt  README.md  backend_kv_server.cpp  check_blockhashes.cpp  check_changes.cpp  check_hashstate.cpp  check_log_indices.cpp  check_pow.cpp  check_senders.cpp  check_tx_lookup.cpp  db_toolbox.cpp  embed.cpp  embed_json.cpp  embed_toml.cpp  execution_pipeline.cpp  genesistool.cpp  grpc_toolbox.cpp  kzg_g2_uncompress.cpp  scan_txs.cpp  snapshots.cpp  staged_pipeline.cpp  toolbox.cpp
cmd/hack/: CMakeLists.txt  first_byte.cpp
cmd/rpcdaemon/: CMakeLists.txt  ethbackend.cpp  ethbackend_async.cpp  ethbackend_coroutines.cpp  kv_seek.cpp  kv_seek_async.cpp  kv_seek_async_callback.cpp  kv_seek_async_coroutines.cpp  kv_seek_both.cpp  silkrpc_daemon.cpp  silkrpc_toolbox.cpp
cmd/state/: account.hpp  bloom_filter.cpp  bloom_filter.hpp  errors.hpp  host.cpp  host.hpp  mpt.cpp  mpt.hpp  mpt_hash.cpp  mpt_hash.hpp  precompiles.cpp  precompiles.hpp  precompiles_cache.cpp  precompiles_cache.hpp  rlp.hpp  state.cpp  state.hpp
cmd/state-transition/: CMakeLists.txt  expected_state.cpp  expected_state.hpp  runner.cpp  state_transition.cpp  state_transition.hpp  state_transition_sample1.json  state_transition_sample3.json  state_transition_sample4.json
cmd/statetransition/: CMakeLists.txt  state.cpp  state.hpp  state_loader.cpp  statetransition.cpp
cmd/test/: CMakeLists.txt  address_sanitizer_fix.hpp  backend_kv_test.cpp  consensus.cpp  consensus_eth2.cpp  ethereum.cpp  fuzzer.cpp  fuzzer_debug.cpp  fuzzer_diagnosis.cpp  fuzzer_diagnostics.cpp  fuzzer_investigation copy.cpp  fuzzer_investigation.cpp  fuzzer_main.cpp  fuzzer_test.cpp  sentry_client_test.cpp  unit_test.cpp
core/: CMakeLists.txt  lrucache.hpp
db/: CMakeLists.txt  Makefile  cmake_install.cmake  database.hpp  lmdb.cpp  lmdb.hpp  lmdb_test.cpp
eth/: CMakeLists.txt  account.cpp  account.hpp  account_test.cpp  block.cpp  block.hpp  bloom.hpp  common.cpp  common.hpp  config.hpp  evm.cpp  evm.hpp  evm_host.cpp  evm_host.hpp  evm_test.cpp  execution.cpp  execution.hpp  execution_test.cpp  fees.hpp  intra_block_state.cpp  intra_block_state.hpp  log.hpp  protocol_param.hpp  protocol_params.hpp  receipt.hpp  state.hpp  transaction.cpp  transaction.hpp  transaction_test.cpp
eth/rlp/: decode.cpp  decode.hpp  decode_test.cpp  encode.cpp  encode.hpp  encode_test.cpp
ethash/: CMakeLists.txt  keccak.h  keccakf800.c
ethash/ethash/: endianess.hpp  ethash.cpp  ethash.hpp  hash_types.hpp  keccak.cpp  keccak.hpp
examples/: CMakeLists.txt  get_latest_block.cpp
interfaces/: CMakeLists.txt  sentry.grpc.pb.cc  sentry.grpc.pb.h  sentry.pb.cc  sentry.pb.h  sentry.proto  types.grpc.pb.cc  types.grpc.pb.h  types.pb.cc  types.pb.h
interfaces/p2psentinel/: sentinel.grpc.pb.cc  sentinel.grpc.pb.h  sentinel.pb.cc  sentinel.pb.h
interfaces/p2psentry/: sentry.grpc.pb.cc  sentry.grpc.pb.h  sentry.pb.cc  sentry.pb.h
interfaces/remote/: ethbackend.grpc.pb.cc  ethbackend.grpc.pb.h  ethbackend.pb.cc  ethbackend.pb.h  ethbackend_mock.grpc.pb.h  kv.grpc.pb.cc  kv.grpc.pb.h  kv.pb.cc  kv.pb.h  kv_mock.grpc.pb.h
interfaces/types/: types.pb.cc  types.pb.h
node/: CMakeLists.txt
sentry/: CMakeLists.txt
sentry/sentry/: enode_url.cpp  enode_url.hpp  enode_url_test.cpp  nat_option.cpp  nat_option.hpp  node_key.cpp  node_key.hpp  node_key_config.cpp  node_key_config.hpp  node_key_config_test.cpp  options.cpp  options.hpp  sentry.cpp  sentry.hpp  server.cpp  server.hpp  service.cpp  service.hpp  settings.hpp
silkworm/: CMakeLists.txt
silkworm-lightclient/: CMakeLists.txt
silkworm/api/: CMakeLists.txt  handle.hpp  sentry.cpp  silkworm_api.cpp  silkworm_api.h
silkworm/c_api/: execution.cpp  execution.h  execution_test.cpp
silkworm/capi/: CMakeLists.txt  common.cpp  common.hpp  fork_validator.cpp  init.cpp  init.h  instance.cpp  instance.hpp  log_level.h  make_log_settings.cpp  make_log_settings.hpp  rpcdaemon.cpp  sentry.cpp  silkworm.cpp  silkworm.h  silkworm_test.cpp  snapshots.cpp  snapshots.hpp
silkworm/chain/: block_chain.cpp  block_chain.hpp  (+6 more)
src/: CMakeLists.txt  account.hpp  block.cpp  block.hpp  bloom.hpp  common.hpp  evm.cpp  evm.hpp  evm_test.cpp  execution.cpp  execution.hpp  execution_test.cpp  intra_block_state.cpp  intra_block_state.hpp  log.hpp  protocol_param.hpp  receipt.hpp  transaction.cpp
tests/: CMakeLists.txt  main.cpp  rlp_test.cpp
(+5577 files in other folders)
